--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.6"
+    "@types/react-beautiful-dnd": "^13.1.6",
+    "@types/react-modal": "^3.16.2"
   }
 }
